model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-s-deployment
  labels:
    app: model-s
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-s
  template:
    metadata:
      labels:
        app: model-s
    spec:
      containers:
        - name: model-s
          image: ghcr.io/remla23-team13/model-service:latest
          ports:
            - name: model-s-port
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: model-s-service
spec:
  type: NodePort
  selector:
    app: model-s
  ports:
    - port: 8000
      targetPort: model-s-port
