ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: my-ingress
spec:
  rules:
#    - host: remla23-group13.com
     - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 3000
          - path: /model-s-service/predict
            pathType: Prefix
            backend:
              service:
                name: model-s-service
                port:
                  number: 8000
  defaultBackend:
    service:
      name: webapp-service
      port:
        number: 3000
